--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -6,6 +6,69 @@
     year = {2020},
     url = {https://www.R-project.org/},
   }
+    @Article{visdat,
+    title = {visdat: Visualising Whole Data Frames},
+    author = {Nicholas Tierney},
+    doi = {10.21105/joss.00355},
+    url = {http://dx.doi.org/10.21105/joss.00355},
+    year = {2017},
+    publisher = {Journal of Open Source Software},
+    volume = {2},
+    number = {16},
+    pages = {355},
+    journal = {JOSS},
+  }
+  @Manual{citegridExtra,
+    title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+    author = {Baptiste Auguie},
+    year = {2017},
+    note = {R package version 2.3},
+  }
+  @Book{citeggplot,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
+  @Manual{corrgram,
+    title = {corrgram: Plot a Correlogram},
+    author = {Kevin Wright},
+    year = {2021},
+    note = {R package version 1.14},
+    url = {https://kwstat.github.io/corrgram/},
+  }
+  @Manual{citekable,
+    title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+    author = {Hao Zhu},
+    year = {2021},
+    note = {http://haozhu233.github.io/kableExtra/,
+https://github.com/haozhu233/kableExtra},
+  }
+  @Manual{citedplyr,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+    year = {2021},
+    note = {https://dplyr.tidyverse.org, https://github.com/tidyverse/dplyr},
+  }
+  @Manual{citetidyr,
+    title = {tidyr: Tidy Messy Data},
+    author = {Hadley Wickham},
+    year = {2021},
+    note = {https://tidyr.tidyverse.org, https://github.com/tidyverse/tidyr},
+  }
+  
+  @Article{citetidyverse,
+    title = {Welcome to the {tidyverse}},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+    year = {2019},
+    journal = {Journal of Open Source Software},
+    volume = {4},
+    number = {43},
+    pages = {1686},
+    doi = {10.21105/joss.01686},
+  }
   
 @article{citeA,
 author = {Martínez-Gómez, E. and Babu, G.},
@@ -14,3 +77,41 @@ month = {08},
 pages = {},
 title = {A statistical model for the relation between exoplanets and their host stars}
 }
+
+ @misc{citeMiss, title={Confusing statistical term #13: Mar and MCAR Missing Data}, url={https://www.theanalysisfactor.com/mar-and-mcar-missing-data/}, journal={The Analysis Factor}, author={Grace-Martin, Karen and says, Martins Ahmed and Ahmed, Martins and says, Harold Gomes and Gomes, Harold and says, Jeremy Taylor and Taylor, Jeremy and says, Karen and Karen}, year={2021}, month={Oct}} 
+
+ @misc{citeNASA1, title={What is the habitable zone or "Goldilocks zone"? – exoplanet exploration: Planets beyond our solar system}, url={https://exoplanets.nasa.gov/faq/15/what-is-the-habitable-zone-or-goldilocks-zone/#:~:text=The%20habitable%20zone%20is%20the,of%20its%20atmosphere%20would%20freeze.}, journal={NASA}, publisher={NASA}, author={Brennan, Pat}, year={2022}} 
+
+ @misc{citeNASA2, title={The habitable zone}, url={https://exoplanets.nasa.gov/search-for-life/habitable-zone/}, journal={NASA}, publisher={NASA}, author={Brennan, Pat}, year={2021}, month={Apr}} 
+
+@misc{citeQuote, title={NASA's Kepler Mission Confirms Its First Planet in Habitable Zone of Sun-like Star}, url={https://www.nasa.gov/mission_pages/kepler/news/kepscicon-briefing.html#:~:text=%22The%20tremendous%20growth%20in%20the,University%20in%20San%20Jose%2C%20Calif.}, journal={NASA}, publisher={NASA}, author={NASA}, year={2001}}
+
+ @misc{citeTop, title={The 10 most Earth-like exoplanets}, url={https://www.space.com/30172-six-most-earth-like-alien-planets.html}, journal={Space.com}, publisher={Space}, author={Howell, Elizabeth and Harvey, Ailsa}, year={2022}, month={Jan}} 
+
+ @misc{citewebsite, title={The Extrasolar
+Planets Encyclopaedia}, url={http://exoplanet.eu/}, journal={Exoplanet.eu}, author={exoplanet TEAM}, year={2022}} 
+
+ @misc{citemap, title={This map shows where in the sky you might find habitable exoplanets}, url={https://astronomy.com/news/2016/05/this-map-shows-where-in-the-sky-you-might-find-habitable-exoplanets}, journal={astronomy.com}, publisher={Astronomy}, author={Wenz}, year={2016}, month={Jan}} 
+
+
+@misc{citeARC, title={NASA Exoplanet Archive}, url={https://exoplanetarchive.ipac.caltech.edu/docs/intro.html}, journal={NASA}, publisher={NASA}, author={NASA}, year={2021}}
+
+ @misc{citezone, title={Title: The habitable zone and extreme planetary orbits - arxiv.org}, url={https://arxiv.org/pdf/1205.2429.pdf}, author={Kane, Stephen and Gelino, Dawn}, year={2013}} 
+
+ @misc{citemass, title={On the radius of habitable planets}, url={https://www.aanda.org/articles/aa/full_html/2014/01/aa22293-13/aa22293-13.html}, journal={Astronomy &amp; Astrophysics}, publisher={EDP Sciences}, author={Alibert, Y.}, year={2013}, month={Dec}} 
+
+ @misc{citepapers, title={EFFECT OF METALLICITY ON THE EVOLUTION OF THE HABITABLE ZONE FROM THE PRE-MAIN SEQUENCE TO THE ASYMPTOTIC GIANT BRANCH AND THE SEARCH FOR LIFE}, url={https://iopscience.iop.org/article/10.1088/0004-637X/769/1/27}, journal={The Astrophysical Journal}, publisher={IOP Publishing}, author={Danchi, William C. and Lopez, Bruno}, year={2013}, month={May}} 
+
+ @misc{citeclass, title={AUTOMATIC CLASSIFICATION OF VARIABLE STARS IN CATALOGS WITH MISSING DATA}, url={https://iopscience.iop.org/article/10.1088/0004-637X/777/2/83#apj484836r23}, journal={The Astrophysical Journal}, publisher={IOP Publishing}, author={Pichara, Karim and Protopapas, Pavlos}, year={2013}, month={Oct}} 
+
+ @misc{citealgo, url={https://datascience.codata.org/articles/10.5334/dsj-2017-037/#5-traditional-methods-of-handling-missing-data}, journal={Data Science Journal}, publisher={Ubiquity Press}, author={Takahashi, Masayoshi}, year={2017}, month={Jul}} 
+
+ @misc{citetrans, title={What's A transit? – exoplanet exploration: Planets beyond our solar system}, url={https://exoplanets.nasa.gov/faq/31/whats-a-transit/#:~:text=Most%20known%20exoplanets%20have%20been,between%20us%20and%20the%20Sun.}, journal={NASA}, publisher={NASA}, author={Brennan, Pat}, year={2022}} 
+
+ @misc{citesearch, title={A search for stars of very low metal abundance. i.}, url={https://ui.adsabs.harvard.edu/abs/1985AJ.....90.2089B/abstract}, journal={NASA/ADS}, author={Beers, T. C. and Preston, G. W. and Shectman, S. A.}, year={1985}} 
+
+ @misc{citefactor, title={Factors affecting exoplanet habitability}, url={https://ui.adsabs.harvard.edu/abs/2018haex.bookE..57M/abstract#:~:text=Processes%20which%20can%20modify%20a,minor%20bodies%3B%20and%20galactic%20phenomena.}, journal={NASA/ADS}, author={Meadows, Victoria S. and Barnes, Rory K.}, year={1970}, month={Jan}} 
+
+ @misc{citejiang, title={A Planetary Mass and Stellar Radius Relationship for Exoplanets Orbiting Red Giants}, url={https://iopscience.iop.org/article/10.3847/2515-5172/aae48c}, journal={Research Notes of the AAS}, publisher={IOP Publishing}, author={Jiang, Jonathan H. and Zhu, Sheldon}, year={2018}, month={Oct}} 
+
+ @misc{citeme, title={THE MASS–METALLICITY RELATION FOR GIANT PLANETS}, url={https://iopscience.iop.org/article/10.3847/0004-637X/831/1/64}, journal={The Astrophysical Journal}, publisher={IOP Publishing}, author={Thorngren, Daniel P. and Fortney, Jonathan J. and Murray-Clay, Ruth A. and Lopez, Eric D.}, year={2016}, month={Oct}} 
